tests/invalid/Template_Invalid_1.whiley
type nat<> is (int x) where x >= 0